--- a/zome/zomes/membrane_roles/Cargo.toml
+++ b/zome/zomes/membrane_roles/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 authors = ["guillem.cordoba@gmail.com"]
 edition = "2018"
-name = "todo_rename_zome"
+name = "membrane_roles"
 version = "0.0.1"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
-name = "todo_rename_zome"
+name = "membrane_roles"
 
 [dependencies]
 derive_more = "0"
