--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
     "start-ui": "CONDUCTOR_URL=ws://localhost:8888 concurrently -k --names tsc,dev-server \"npm run build-watch\" \"web-dev-server --config demo/web-dev-server.config.mjs\"",
     "start-holochain": "RUST_LOG=warn holochain-run-dna ../zome/membrane_roles.dna.gz",
     "build": "rimraf dist && tsc",
+    "build-bundle": "rimraf dist && rollup -c rollup-bundle.config.js",
     "build-watch": "tsc --watch",
     "test": "tsc && web-test-runner --coverage --puppeteer",
     "test-debug": "tsc && DEBUG=true web-test-runner --coverage --puppeteer",
@@ -26,14 +27,15 @@
     "publish-to-branch": "npm run lint && npm run build && cp package.json dist && gh-pages -d dist -b ui-build"
   },
   "dependencies": {
-    "@apollo/client": "^3.2.0",
-    "@graphql-tools/schema": "^6.2.3",
-    "@holochain-open-dev/profiles": "git://github.com/holochain-open-dev/profiles.git#ui-build",
+    "@compository/lib": "git+https://github.com/compository/lib.git#build",
     "@holochain-open-dev/common": "git://github.com/holochain-open-dev/common.git#ui-build",
+    "@holochain-open-dev/membrane-context": "^0.1.0",
+    "@holochain-open-dev/profiles": "git://github.com/holochain-open-dev/profiles.git#ui-build",
     "@holochain/conductor-api": "0.0.1-dev.13",
-    "graphql": "^15.3.0",
+    "@open-wc/scoped-elements": "^1.3.2",
     "lit-element": "^2.4.0",
-    "lit-html": "^1.3.0"
+    "lit-html": "^1.3.0",
+    "scoped-material-components": "git+https://github.com/guillemcordoba/scoped-material-components.git#build"
   },
   "devDependencies": {
     "@open-wc/demoing-storybook": "^2.0.0",
@@ -42,6 +44,7 @@
     "@open-wc/testing-karma": "^3.0.0",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-typescript": "^8.1.0",
     "@types/node": "13.11.1",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
@@ -62,6 +65,7 @@
     "lint-staged": "^10.0.0",
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
+    "rollup": "^2.35.1",
     "rollup-plugin-node-builtins": "^2.1.2",
     "tslib": "^1.11.0",
     "typescript": "~3.9.0",
